--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@
                     <li class="auth" style="display: none;"><a href="#" id="distanceLink" onclick="app.loadPage('distanceTemplate');app.setSidebar(this);">Distance</a></li>
                     <li class="" ><a href="#" id="aboutLink" onclick="app.loadPage('aboutTemplate');app.setSidebar(this);">About</a></li>
                     <li class="" ><a href="#" id="supportLink" onclick="app.loadPage('supportTemplate');app.setSidebar(this);">Support</a></li>
-                    <li class="auth" style="display: none;"><a href="#"  onclick="app.setUserLogout();">Logout</a></li>
+                    <li class="auth" style="display: none;"><a href="#"  onclick="app.setUserLogout();app.loadPage('loginTemplate');app.setSidebar($('#loginLink'));">Logout</a></li>
                 </ul>
                 <a  data-activates="slide-out" class="button-collapse hide-on-large"><i class="mdi-navigation-menu"></i></a>
             </div>
@@ -93,11 +93,11 @@
 
     <script type="text/html" id="profileTemplate">
         <br>
-        <div class="row detail margin30"  >
+        <div class="row "  >
 
-            <div class="col s12 m12 z-depth-1" >
+            <div class="col s12 m12 " >
                 <div class="col s12 m4 center" >
-                    <form enctype="multipart/form-data" action="site/profile" onsubmit="app.profileForm(this);" method="post">
+                    <form enctype="multipart/form-data" action="site/profile" onsubmit="event.preventDefault();app.profileForm(this);" method="post">
 
                         <img src="_img_" alt="" style="height: 73px;width: 73px;" class="circle user-img responsive-img">
                         <a href="#" class="btn-floating  waves-effect waves-light transparent  imgfiletbtn" ><i class="fa fa-camera fa-2x blue-text"></i></a>
@@ -152,7 +152,7 @@
 
     <script type="text/html" id="aboutTemplate">
         <div class="row detail"  style="margin: 30px;   ">
-            <div class="col s12 m12 z-depth-1 center" >
+            <div class="col s12 m12  center" >
                 <a href="#" onclick="app.loadDefaultPage();" class="btn-floating  waves-effect waves-light red right flotbtn" ><i class="fa fa-times"></i></a>
                 <h5>about</h5>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
@@ -161,7 +161,7 @@
     </script>
     <script type="text/html" id="supportTemplate">
         <div class="row detail"  style="margin: 30px;   ">
-            <div class="col s12 m12 z-depth-1 center" >
+            <div class="col s12 m12  center" >
                 <a href="#" onclick="app.loadDefaultPage();" class="btn-floating  waves-effect waves-light red right flotbtn" ><i class="fa fa-times"></i></a>
                 <h5>support</h5>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
@@ -170,8 +170,8 @@
     </script>
 
     <script type="text/html" id="signupTemplate">
-        <div class="row detail margin30"  >
-            <div class="col s12 m12 z-depth-1 center" >
+        <div class="row "  >
+            <div class="col s12 m12  center" >
             <form class="col s12" role="form" enctype="multipart/form-data" action="/site/signup" onsubmit="event.preventDefault();app.signupForm(this);" method="post">
                 <div class="row">
                     <div class="input-field col s12">
@@ -214,10 +214,10 @@
         </div></div>
 </script>
     <script type="text/html" id="loginTemplate">
-        <div class="row detail margin30"  >
+        <div class="row "  >
 
-            <div class="col s12 m12 z-depth-1" >
-            <form class="col s12" role="form" enctype="multipart/form-data" action="/site/login" onsubmit="app.loginForm(this);" method="post">
+            <div class="col s12 m12 " >
+            <form class="col s12" role="form" enctype="multipart/form-data" action="/site/login" onsubmit="event.preventDefault();" method="post">
                 <div class="row">
                     <div class="input-field col s12">
                         <input id="email" type="text" name="s_email" class="validate">
@@ -232,7 +232,7 @@
                 </div>
                 <div class="row">
                     <div class="col s12 center">
-                        <button type="submit" class="waves-effect waves-light btn light-green accent-4" name="loginBtn">&nbsp;Login&nbsp;<i class="material-icons right"></i></button>
+                        <a href="#" onclick="app.loadProfile2();app.setSidebar($('profileLink'));app.setUserLogin();" class="waves-effect waves-light btn light-green accent-4" name="loginBtn">&nbsp;Login&nbsp;<i class="material-icons right"></i></a>
                     </div>
                 </div>
                 <div class="row">
@@ -240,16 +240,6 @@
                         <a href="#" onclick="app.loadPage('signupTemplate');app.setSidebar($('loginLink'));" class="waves-effect waves-light btn light-green accent-4" name="loginBtn">Signup<i class="material-icons right"></i></a>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col s12 center">
-                        <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-                        </fb:login-button>
-
-                        <div id="status">
-                        </div>
-                    </div>
-                </div>
-
 
             </form>
         </div>
@@ -276,7 +266,6 @@
 
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
-    <script type="text/javascript" src="js/rateit/jquery.rateit.min.js"></script>
     <script src="http://maps.googleapis.com/maps/api/js"></script>
 
     <script type="text/javascript" src="js/index.js"></script>
