--- a/www/index.html
+++ b/www/index.html
@@ -349,7 +349,7 @@
                 </div>
                 <div class="row">
                     <div class="col s12 center">
-                        <a href="#" onclick="app.loadPage('signupTemplate');app.setSidebar($('loginLink'));" class="waves-effect waves-light btn light-green accent-4" name="loginBtn">Signup<i class="material-icons right"></i></a>
+                        <a href="#" onclick="app.loadPage('signupTemplate');app.setSidebar($('#loginLink'));" class="waves-effect waves-light btn light-green accent-4" name="loginBtn">Signup<i class="material-icons right"></i></a>
                     </div>
                 </div>
 
