--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
                 <a id="logo-container"  class="brand-logo"><img src="img/logo.jpg" class="logo"></a>
                 <a id="msg_ico"><img src="img/ENGFeel_rakendus_avaleht_uus_06.jpg" class="msg_icon"></a>
                 <ul id="slide-out" class="side-nav">
-                    <li  class="auth lineheight26 padding0" >
+                    <li  class="auth sidebg height80 padding0" >
                         <a  href="#" id="profileLink" onclick="app.loadProfile2(this);app.setSidebar($('#profileLink'));" >
                             <div id="userLogo">
 
@@ -31,7 +31,7 @@
                         </a>
                     </li>
                     <li class="active site-login"><a href="#" id="loginLink" onclick="app.loadPage('loginTemplate');app.setSidebar(this);" >Login</a></li>
-                    <li class="auth site-profile"  style="display: none;"><a href="#" id="homeLink" onclick="app.loadPage('homeTemplate');app.setSidebar($('#homeLink'));" ><img src="img/home.png" class="menu_icon"> &nbsp; Home</a></li>
+                    <li class="auth site-profile"  style="display: none;"><a href="#" id="homeLink" onclick="app.loadPage('homeTemplate');app.setSidebar($('#homeLink'));" ><img src="img/home.png" class="menu_icon">  Home</a></li>
                     
                     <li><a href="#" ><img src="img/resaturant.png" class="menu_icon"> &nbsp; Restaurants </a></li>
                     <li><a href="#" ><img src="img/coupen.png" class="menu_icon"> &nbsp; Coupons </a></li>
@@ -160,11 +160,17 @@
     </script>
 
     <script type="text/html" id="homeTemplate">
-        <div class="row detail"  style="margin: 30px;   ">
+        <div class="row detail"  >
             <div class="col s12 m12  center" >
-                <a href="#" onclick="app.loadDefaultPage();" class="btn-floating  waves-effect waves-light red right flotbtn" ><i class="fa fa-times"></i></a>
-                <h5>home</h5>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+			<div class="home_profile_img">
+				<img src="img/profile_pic_03.png" style="width:90%"/>
+			</div>
+            </div>
+			 <div class="col s12 m12 center" style="vertical-align:middle" >
+
+                <img class="inlineblock home_close_like_icon" src="img/close.jpg" />
+				<img class="inlineblock home_search_icon" src="img/search.jpg"/>
+				<img class="inlineblock home_close_like_icon" src="img/like.png"/>
             </div>
         </div>
     </script>
@@ -344,7 +350,7 @@
                 </div>
                 <div class="row">
                     <div class="col s12 center">
-                        <a href="#" onclick="app.loadProfile2();app.setSidebar($('#profileLink'));app.setUserLogin();" class="waves-effect waves-light btn light-green accent-4" name="loginBtn">&nbsp;Login&nbsp;<i class="material-icons right"></i></a>
+                        <a href="#" onclick="app.loadProfile2();" class="waves-effect waves-light btn light-green accent-4" name="loginBtn">&nbsp;Login&nbsp;<i class="material-icons right"></i></a>
                     </div>
                 </div>
                 <div class="row">
@@ -360,7 +366,7 @@
 
 
     <script type="text/html" id="userProfileTemplate">
-        <div class="sidebg height80 ">
+        <div class=" lineheight26">
 
         <div class="left height80">
 
