--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,7 @@
                 <a id="msg_ico"><img src="img/ENGFeel_rakendus_avaleht_uus_06.jpg" class="msg_icon"></a>
                 <ul id="slide-out" class="side-nav">
                     <li  class="auth sidebg height80 padding0" >
-                        <a  href="#" id="profileLink" onclick="app.loadProfile2(this);app.setSidebar($('#profileLink'));" >
+                        <a  href="#" id="profileLink" onclick="app.loadProfile2(this);" >
                             <div id="userLogo">
 
                             </div>
@@ -350,7 +350,7 @@
                 </div>
                 <div class="row">
                     <div class="col s12 center">
-                        <a href="#" onclick="app.loadProfile2();" class="waves-effect waves-light btn light-green accent-4" name="loginBtn">&nbsp;Login&nbsp;<i class="material-icons right"></i></a>
+                        <a href="#" onclick="app.loadPage('homeTemplate');app.setSidebar($('#homeLink'));app.loadlogin();" class="waves-effect waves-light btn light-green accent-4" name="loginBtn">&nbsp;Login&nbsp;<i class="material-icons right"></i></a>
                     </div>
                 </div>
                 <div class="row">
