--- a/www/index.html
+++ b/www/index.html
@@ -201,7 +201,7 @@
     </script>
 
     <script type="text/html" id="restaurentTemplate">
-        <div class="row detail"  >
+        <div class="row detail" >
 
             <div class="owl-carousel">
                 <div class="item center" >
@@ -213,8 +213,8 @@
                     <img src="img/slider2.jpg" style="height: 360px;"/>
                 </div>
             </div>
-            <div class="center" style="width: 100% !important;position: relative;top: -89px;z-index: 1;height: 100px;">
-                <img src="img/profile_bakground_bottom_02.png" width="100% !important" >
+            <div class="center" style="width: 100% !important;position: relative;top: -67px;z-index: 1;height: 100px;">
+                <img src="img/profile_bakground_bottom_03.png" width="100% !important" >
                 <div class="center" style="width: 100% !important; position: absolute;margin-left:auto;margin-right: auto">
                     <div class="row detail" style="margin-left: 20px;margin-right: 20px;background-color: white;" >
                         <div class="col s4 m3" style="font-size: x-large;">Alexander</div>
@@ -270,15 +270,16 @@
     </script>
 
     <script type="text/html" id="homeTemplate">
-        <div class="wrap row">
-            <div id="tinderslide" class="col s6 center">
+        <div class="wrap row" >
+            <div id="tinderslide"  class="col s6 center">
                 <ul>
                     <li class="pane1">
                         <div class="col s12 m12  center " >
-                            <div class="pro_box" onclick="app.loadPage('userTemplate');app.userInit();">
+                            <div class="pro_box" >
                                 <img  src="img/profile_bg.png" class="responsive-img" style="position: absolute;left: 0px;"/>
                                 <img  src="img/profile_pic_03.png" class="responsive-img" style="position: relative;top: 10px;left: 0;width: 88%;"/>
-
+                                <div class="like"></div>
+                                <div class="dislike"></div>
                             </div>
                             <div style="position: relative; left: 0; top:2px;color:#81827f">
                                 <h4>KEITLIN (26)</h4>
@@ -312,7 +313,8 @@
                             <div class="pro_box" onclick="app.loadPage('userTemplate');app.userInit();">
                                 <img  src="img/profile_bg.png" class="responsive-img" style="position: absolute;left: 0px;"/>
                                 <img  src="img/profile_pic_03.png" class="responsive-img" style="position: relative;top: 10px;left: 0;width: 88%;"/>
-
+                                <div class="like"></div>
+                                <div class="dislike"></div>
                             </div>
                             <div style="position: relative; left: 0; top:2px;color:#81827f">
                                 <h4>KEITLIN (26)</h4>
@@ -346,7 +348,8 @@
                             <div class="pro_box" onclick="app.loadPage('userTemplate');app.userInit();">
                                 <img  src="img/profile_bg.png" class="responsive-img" style="position: absolute;left: 0px;"/>
                                 <img  src="img/profile_pic_03.png" class="responsive-img" style="position: relative;top: 10px;left: 0;width: 88%;"/>
-
+                                <div class="like"></div>
+                                <div class="dislike"></div>
                             </div>
                             <div style="position: relative; left: 0; top:2px;color:#81827f">
                                 <h4>KEITLIN (26)</h4>
@@ -382,7 +385,7 @@
             <div class="actions" >
                 <div class="bottom_btn">
                     <a href="#" class="dislike"><img class="inlineblock home_close_like_icon " src="img/close.png" /></a>
-                    <img class="inlineblock home_search_icon" src="img/search.png"/>
+                    <img class="inlineblock home_search_icon" src="img/search.png" onclick="app.loadPage('userTemplate');app.userInit();"/>
                     <a href="#" class="like"><img class="inlineblock home_close_like_icon " src="img/like.png"/></a>
                 </div>
             </div>
@@ -937,8 +940,8 @@
                     <img src="img/edit_profile_big.jpg" style="height: 360px;"/>
                 </div>
             </div>
-            <div class="center" style="width: 100% !important;position: relative;top: -89px;z-index: 1;height: 100px;">
-                <img src="img/profile_bakground_bottom_02.png" width="100% !important" >
+            <div class="center" style="width: 100% !important;position: relative;top: -67px;z-index: 1;height: 100px;">
+                <img src="img/profile_bakground_bottom_03.png" width="100% !important" >
                 <div class="center" style="width: 100% !important; position: absolute;margin-left:auto;margin-right: auto">
                     <div class="row detail" style="margin-left: 20px;margin-right: 20px;background-color: white;" >
                         <div class="col s4 m3" style="font-size: x-large;">Alexander</div>
