--- a/www/index.html
+++ b/www/index.html
@@ -218,7 +218,7 @@
     </script>
 
     <script type="text/html" id="homeUserListTemplate">
-        <li class="pane1">
+        <li class="pane1" lang="_u_id_">
         <div class="col s12 m12  center " >
             <div class="pro_box" >
                 <img  src="img/profile_bg.png" class="responsive-img" style="position: absolute;left: 0px;"/>
