--- a/www/index.html
+++ b/www/index.html
@@ -818,6 +818,17 @@
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/validations.js"></script>
 
+    <!--Chat Js start #############################################################################################3-->
+
+    <script type="text/javascript" src="libs/quickblox/quickblox.min.js"></script>
+    <script type="text/javascript" src="js/qb/config.js"></script>
+    <script type="text/javascript" src="js/qb/message.js"></script>
+    <script type="text/javascript" src="js/qb/connection.js"></script>
+    <script type="text/javascript" src="js/background.js"></script>
+
+
+    <!--Chat Js end ############################################################################################3###-->
+
 
     </body>
 </html>
