--- a/www/index.html
+++ b/www/index.html
@@ -45,6 +45,7 @@
                     <!--MEssage btn -->
                     <a id="msg_ico" class="msg_a dHeader2 auth" style="display: none;" onclick="app.chatLink();">
                         <img src="img/ENGFeel_rakendus_avaleht_uus_06.jpg" class="msg_icon">
+                        <span class="msgCount"></span>
                     </a>
 
                     <!--sidemenu start-->
